--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -3,6 +3,9 @@ name: Docker Image CI
 on:
   push:
     branches: [ master ]
+    
+env:
+  DOCKER_USERNAME: "${{ env.DOCKERHUB_USERNAME }}"
 
 jobs:
 
@@ -15,14 +18,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build . --file ActivityPubServer/Dockerfile --tag lnadev/activity-pub-server:${{ github.run_number }}
+        run: docker build . --file ActivityPubServer/Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:${{ github.run_number }}
 
       - name: Push the image to dockerhub
-        run: docker push lnadev/activity-pub-server:${{ github.run_number }}
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:${{ github.run_number }}
   
   ReleaseLatest:
     runs-on: ubuntu-latest
@@ -37,7 +40,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build . --file ActivityPubServer/Dockerfile --tag lnadev/activity-pub-server:latest
+        run: docker build . --file ActivityPubServer/Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:latest
 
       - name: Push the image to dockerhub
-        run: docker push lnadev/activity-pub-server:latest
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:latest
