--- a/ActivityPubServer/ActivityPubServer.csproj
+++ b/ActivityPubServer/ActivityPubServer.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.2" />
       <PackageReference Include="Serilog" Version="2.12.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
