--- a/ActivityPubServer/ActivityPubServer.csproj
+++ b/ActivityPubServer/ActivityPubServer.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.2" />
+      <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
       <PackageReference Include="Serilog" Version="2.12.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
