--- a/ActivityPubServer/ActivityPubServer.csproj
+++ b/ActivityPubServer/ActivityPubServer.csproj
@@ -14,11 +14,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.2" />
-        <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
-        <PackageReference Include="Serilog" Version="2.12.0" />
-        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.2"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12"/>
+        <PackageReference Include="MongoDB.Driver" Version="2.18.0"/>
+        <PackageReference Include="Serilog" Version="2.12.0"/>
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.6"/>
     </ItemGroup>
 
 </Project>
