--- a/ActivityPubServer/ActivityPubServer.csproj
+++ b/ActivityPubServer/ActivityPubServer.csproj
@@ -17,6 +17,10 @@
         <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />
         <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+        <PackageReference Include="OpenIddict" Version="4.0.0" />
+        <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0" />
+        <PackageReference Include="OpenIddict.MongoDb" Version="4.0.0" />
+        <PackageReference Include="OpenIddict.Server" Version="4.0.0" />
         <PackageReference Include="Serilog" Version="2.12.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
