👷 Updated Dockerfile Path for latest
#112

--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -60,7 +60,7 @@ jobs:
 
       # Build
       - name: Build the Docker image
-        run: docker build . --file Fedido.Server/Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:latest
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:latest
 
       # Publish
       - name: Login to Docker Hub
