--- a/Kubernetes/ActivityPubServer-Deployment.yaml
+++ b/Kubernetes/ActivityPubServer-Deployment.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: ap
-          image: lnadev/activity-pub-server:121
+          image: lnadev/activity-pub-server:dev_8
           imagePullPolicy: Always
           resources:
             limits:
