--- a/.github/workflows/DevBuild.yaml
+++ b/.github/workflows/DevBuild.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ dev ]
 
 env:
-  DOCKERHUB_USERNAME: "lnadev"
+  DOCKERHUB_USERNAME: "fedodo"
   PROJECT_PATH: "Fedodo.Server.Test/Fedodo.Server.Test.csproj"
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
 
       # Build
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:dev_${{ github.run_number }}
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:dev_${{ github.run_number }}
 
       # Publish
       - name: Login to Docker Hub
@@ -40,4 +40,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push the image to dockerhub
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:dev_${{ github.run_number }}
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:dev_${{ github.run_number }}
