--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -5,8 +5,9 @@ on:
     branches: [ master ]
 
 env:
-  DOCKERHUB_USERNAME: "lnadev"
+  DOCKERHUB_USERNAME: "fedodo"
   PROJECT_PATH: "Fedodo.Server.Test/Fedodo.Server.Test.csproj"
+  VERSION: 0.1.${{ github.run_number }}
 
 jobs:
   RunTests:
@@ -38,7 +39,7 @@ jobs:
 
       # Build
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:${{ github.run_number }}
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:${{ env.VERSION }}
 
       # Publish
       - name: Login to Docker Hub
@@ -48,7 +49,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push the image to dockerhub
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:${{ github.run_number }}
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:${{ env.VERSION }}
   
   ReleaseLatest:
     runs-on: ubuntu-latest
@@ -60,7 +61,7 @@ jobs:
 
       # Build
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:latest
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:latest
 
       # Publish
       - name: Login to Docker Hub
@@ -70,4 +71,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push the image to dockerhub
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/activity-pub-server:latest
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:latest
