🔥 Removed Auth files

--- a/Fedodo.Server/Fedodo.Server.csproj
+++ b/Fedodo.Server/Fedodo.Server.csproj
@@ -14,15 +14,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.11" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />
-        <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
-        <PackageReference Include="OpenIddict" Version="4.0.0" />
-        <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0" />
-        <PackageReference Include="OpenIddict.MongoDb" Version="4.0.0" />
-        <PackageReference Include="OpenIddict.Server" Version="4.0.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.6" />
+        <PackageReference Include="Fedodo.NuGet.Common" Version="0.0.5"/>
+        <PackageReference Include="LNA-DEV.CommonExtensions" Version="1.2.11"/>
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12"/>
+        <PackageReference Include="MongoDB.Driver" Version="2.19.0"/>
+        <PackageReference Include="OpenIddict" Version="4.0.0"/>
+        <PackageReference Include="OpenIddict.AspNetCore" Version="4.0.0"/>
+        <PackageReference Include="OpenIddict.MongoDb" Version="4.0.0"/>
+        <PackageReference Include="OpenIddict.Server" Version="4.0.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.6"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -32,11 +33,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="wwwroot\css\site.css" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+        <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml"/>
+        <_ContentIncludedByDefault Remove="Views\Account\Login.cshtml"/>
+        <_ContentIncludedByDefault Remove="Views\Shared\_Layout.cshtml"/>
+        <_ContentIncludedByDefault Remove="Views\_ViewImports.cshtml"/>
+        <_ContentIncludedByDefault Remove="Views\_ViewStart.cshtml"/>
     </ItemGroup>
 
 </Project>
