--- a/.github/workflows/DevBuild.yaml
+++ b/.github/workflows/DevBuild.yaml
@@ -8,7 +8,7 @@ on:
 
 env:
   DOCKERHUB_USERNAME: "fedodo"
-  PROJECT_PATH: "Fedodo.Server.Test/Fedodo.Server.Test.csproj"
+  PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
 
 jobs:
 
