--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -7,7 +7,6 @@ on:
 env:
   DOCKERHUB_USERNAME: "fedodo"
   PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
-  VERSION: 0.1.${{ github.run_number }}
 
 jobs:
   RunTests:
@@ -39,7 +38,7 @@ jobs:
 
       # Build
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:${{ env.VERSION }}
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.be.activitypub:${{ github.run_number }}
 
       # Publish
       - name: Login to Docker Hub
@@ -49,26 +48,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Push the image to dockerhub
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:${{ env.VERSION }}
-  
-  ReleaseLatest:
-    runs-on: ubuntu-latest
-    needs: [ "RunTests" ]
-    
-    steps:
-      # Checkout
-      - uses: actions/checkout@v3
-
-      # Build
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:latest
-
-      # Publish
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Push the image to dockerhub
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.server:latest
+        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.be.activitypub:${{ github.run_number }}
