--- a/.github/workflows/DevBuild.yaml
+++ b/.github/workflows/DevBuild.yaml
@@ -61,4 +61,4 @@ jobs:
       - uses: actions/checkout@v3
 
       # Deploy to Kubernetes
-      - run: helm upgrade fedodo oci://registry-1.docker.io/fedodo/fedodo.chart --values ./Kubernetes/values.yaml --kubeconfig ${{ steps.write_file.outputs.filePath }} --set fedodoServer.customContainerVersion=${{ env.DOCKERHUB_USERNAME }}/fedodo.server:dev_${{ github.run_number }}
+      - run: helm upgrade fedodo oci://registry-1.docker.io/fedodo/fedodo.chart --values ./Kubernetes/values.yaml --kubeconfig ${{ steps.write_file.outputs.filePath }} --set microservices.fedodo_be_activitypub.version=${{ env.DOCKERHUB_USERNAME }}/fedodo.be.activitypub:dev_${{ github.run_number }}
