--- a/.github/workflows/DevBuild.yaml
+++ b/.github/workflows/DevBuild.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: Fedodo/Fedodo.Pipelines.BuildContainer.NET@V11
+      - uses: Fedodo/Fedodo.Pipelines.BuildContainer.NET@main
         with:
           PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
           DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
