--- a/.github/workflows/DevBuild.yaml
+++ b/.github/workflows/DevBuild.yaml
@@ -12,7 +12,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: Fedodo/Fedodo.Pipelines.BuildContainer.NET/BuildContainer.NET@main
+      - uses: Fedodo/Fedodo.Pipelines/BuildContainer.NET@main
         with:
           PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
-          DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
+          DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}      
+      - uses: Fedodo/Fedodo.Pipelines/DeployContainer.NET@main
+        with:
+          KUBECTL_CONFIG: ${{ secrets.KUBECTL_CONFIG }}
+          VALUES_FILE: ".Kubernetes/values.yaml"
+          MICROSERVICE: "fedodo_be_activitypub"
+          REPO: "fedodo.be.activitypub"
