--- a/.github/workflows/DevBuild.yaml
+++ b/.github/workflows/DevBuild.yaml
@@ -15,7 +15,8 @@ jobs:
       - uses: Fedodo/Fedodo.Pipelines/BuildContainer.NET@main
         with:
           PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
-          DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}      
+          DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
+          REPO: "fedodo.be.activitypub"
       - uses: Fedodo/Fedodo.Pipelines/DeployContainer.NET@main
         with:
           KUBECTL_CONFIG: ${{ secrets.KUBECTL_CONFIG }}
