--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -3,49 +3,15 @@ name: Docker Image CI
 on:
   push:
     branches: [ master ]
-
-env:
-  DOCKERHUB_USERNAME: "fedodo"
-  PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
-
+    
 jobs:
   RunTests:
     runs-on: ubuntu-latest
     
     steps:
-      # Checkout
-      - uses: actions/checkout@v3
-
-      # Test
-      - name: "Install .net"
-        uses: actions/setup-dotnet@v1
+      - uses: Fedodo/Fedodo.Pipelines/BuildContainer.NET@main
         with:
-          dotnet-version: "6.x"
-
-      - name: "Restore packages"
-        run: dotnet restore ${{ env.PROJECT_PATH }}
-
-      - name: "Test"
-        run: dotnet test ${{ env.PROJECT_PATH }} --no-restore --configuration Release
-
-  ReleaseVersion:
-    runs-on: ubuntu-latest
-    needs: [ "RunTests" ]
-    
-    steps:
-      # Checkout
-      - uses: actions/checkout@v3
-
-      # Build
-      - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKERHUB_USERNAME }}/fedodo.be.activitypub:${{ github.run_number }}
-
-      # Publish
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Push the image to dockerhub
-        run: docker push ${{ env.DOCKERHUB_USERNAME }}/fedodo.be.activitypub:${{ github.run_number }}
+          TAG_PREFIX: ""
+          PROJECT_PATH: "Fedodo.BE.ActivityPub.Test/Fedodo.BE.ActivityPub.Test.csproj"
+          DOCKERHUB_TOKEN: ${{secrets.DOCKERHUB_TOKEN}}
+          REPO: "fedodo.be.activitypub"
