--- a/Dockerfile_DEV
+++ b/Dockerfile_DEV
@@ -1,9 +1,9 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
 WORKDIR /src
 COPY ["Fedodo.BE.ActivityPub/Fedodo.BE.ActivityPub.csproj", "Fedodo.BE.ActivityPub/"]
 RUN dotnet restore "Fedodo.BE.ActivityPub/Fedodo.BE.ActivityPub.csproj"
